--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-body {
-    background: blue;
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: black;
+    overflow: hidden;
+}
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: aqua;
+    text-align: center;
+    padding: 12px 14px;
+    text-decoration: none;
+    font-size: 20px;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: whitesmoke;
+    color: blue;
 }
