--- a/style.css
+++ b/style.css
@@ -17,3 +17,57 @@
     background-color: whitesmoke;
     color: blue;
 }
+#menu-icon {
+    font-size: 3.6rem;
+    color: black;
+    display: none;
+}
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.home-img img {
+    width: 35vw;
+}
+.home-content h3 {
+    font-size: 3.2rem;
+    font-weight: 700;
+}
+.home-content h3:nth-of-type(2) {
+    margin-bottom: 2rem;
+}
+span {
+    color: aqua;
+}
+.home-content h1 {
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+.home-content p {
+    font-size: 1.6rem;
+}
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background: transparent;
+    border: 2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 2rem;
+    color: blue;
+    margin: 3rem 1.5rem 3rem 0;
+    transition: 5s ease;
+}
+.social-media a:hover {
+    background: whitesmoke;
+    color: beige;
+    box-shadow: 0 0 1rem aquamarine;
+}
