--- a/style.css
+++ b/style.css
@@ -71,3 +71,25 @@ span {
     color: beige;
     box-shadow: 0 0 1rem aquamarine;
 }
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: rgb(63, 63, 65);
+}
+.heading {
+    text-align: center;
+    font-size: 4.5rem;
+}
+.about-content h2 {
+    text-align: left;
+    line-height: 1.2;
+}
+.about-content h3 {
+    font-size: 2.6rem;
+}
+.about-content p {
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
+}
