--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: whitesmoke;
 }
 .home-img img {
     width: 35vw;
@@ -92,4 +93,126 @@ span {
 .about-content p {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
+}
+.services h2 {
+    margin-bottom: 5rem;
+}
+.skills-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+.skills-container h2 {
+    font-size: 2.6rem;
+}
+.skills-container p {
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+.project {
+    background: rgb(63, 63, 65);
+}
+.project h2 {
+    margin-bottom: 4rem;
+}
+
+.project-layer {
+    position: absolute;
+    
+    justify-content: center;
+    align-items: center;
+    
+    gap: 2rem;
+    background: linear-gradient(rgba(0 0 0 .1), var(--main-color));
+}
+.project-layer h4 {
+    font-size: 3rem;
+
+}
+.project-layer p {
+    font-size: 1.6rem;
+    margin: 3rem 0 1rem;
+}
+.project-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+.project-layer a i {
+    font-size: 2rem;
+    color: var(--second-bg-color);
+}
+
+.contact h2 {
+    margin-bottom: 3rem;
+
+}
+.contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+   
+}
+.contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+
+}
+.contact form .input-box input,
+.contact form textarea {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: 8rem;
+    margin: .7rem 0;
+}
+.contact form .input-bax input {
+    width: 49%;
+}
+.contact form textarea {
+    resize: none;
+}
+.contact form .btn {
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--second-bg-color);
+}
+.footer-text p {
+    font-size: 1.6rem;
+
+}
+.footer-iconTop a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8rem;
+    background: var(--main-color);
+    border-radius: .8rem;
+    transition: 5s ease;
+}
+.footer-iconTop a:hover {
+    box-shadow: 0 0 1rem var(--main-color);
+}
+.footer-iconTop a i {
+    font-size: 2.4rem;
+    color: var(--second-bg-color);
 }
