--- a/style.css
+++ b/style.css
@@ -1,230 +1,67 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: black;
-    overflow: hidden;
-   
-   
-   
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+* {
+ 
+  font-family: "Afacad", sans-serif;
+  font-optical-sizing: auto;
+  margin: 0;
+  padding: 0;
+  
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: aqua;
-    text-align: center;
-    padding: 12px 14px;
+nav {
+    background-color: #F5FAFA;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px 0 20px;
+}
+
+nav #nav-items {
+    display: flex;
+    gap: 1em;
+    list-style: none;
+    padding: 1em;
+}
+
+nav #nav-items .nav-item a {
     text-decoration: none;
-    font-size: 20px;
-    
 }
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: whitesmoke;
-    color: blue;
+
+a {
+    text-decoration: none;
 }
-#menu-icon {
-    font-size: 3.6rem;
-    color: black;
-    display: none;
+
+a:visited {
+    color: #0F1414;
 }
-section {
-    min-height: 100vh;
-    padding: 10rem 9% 2rem;
+
+a:active {
+    color: #ADD6D6;
+    text-decoration: underline;
 }
-.home {
+
+#logo a {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    color: #05203B;
+}
+
+#home {
     display: flex;
-    justify-content: center;
     align-items: center;
-    background: rgb(109, 103, 131);
-}
-.home-img img {
-    width: 35vw;
-
-    
-}
-.home-content h3 {
-    font-size: 3.2rem;
-    font-weight: 700;
-}
-.home-content h3:nth-of-type(2) {
-    margin-bottom: 2rem;
-}
-span {
-    color: aqua;
-}
-.home-content h1 {
-    font-size: 5.6rem;
-    font-weight: 700;
-    line-height: 1.3;
-}
-.home-content p {
-    font-size: 1.6rem;
-}
-.social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background: transparent;
-    border: 2rem solid var(--main-color);
-    border-radius: 50%;
-    font-size: 2rem;
-    color: blue;
-    margin: 3rem 1.5rem 3rem 0;
-    transition: 5s ease;
-}
-.social-media a:hover {
-    background: whitesmoke;
-    color: beige;
-    box-shadow: 0 0 1rem aquamarine;
-}
-.about {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    background: rgb(63, 63, 65);
-}
-.heading {
-    text-align: center;
-    font-size: 4.5rem;
-}
-.about-content h2 {
-    text-align: left;
-    line-height: 1.2;
-}
-.about-content h3 {
-    font-size: 2.6rem;
-}
-.about-content p {
-    font-size: 1.6rem;
-    margin: 2rem 0 3rem;
-}
-.services h2 {
-    margin-bottom: 5rem;
-}
-.skills-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-}
-.skills-container h2 {
-    font-size: 2.6rem;
-}
-.skills-container p {
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
-}
-.project {
-    background: rgb(63, 63, 65);
-}
-.project h2 {
-    margin-bottom: 4rem;
+    background-color: #E0F0F0;
+    height: 80vh;
+    padding: 0 20px;
 }
 
-.project-layer {
-    position: absolute;
-    
-    justify-content: center;
-    align-items: center;
-    
-    gap: 2rem;
-    background: linear-gradient(rgba(0 0 0 .1), var(--main-color));
-}
-.project-layer h4 {
-    font-size: 3rem;
-
-}
-.project-layer p {
-    font-size: 1.6rem;
-    margin: 3rem 0 1rem;
-}
-.project-layer a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 5rem;
-    height: 5rem;
-    background: var(--text-color);
-    border-radius: 50%;
-}
-.project-layer a i {
-    font-size: 2rem;
-    color: var(--second-bg-color);
-}
-
-.contact h2 {
-    margin-bottom: 3rem;
-
-}
-.contact form {
-    max-width: 70rem;
-    margin: 1rem auto;
-    text-align: center;
-    margin-bottom: 3rem;
-   
-}
-.contact form .input-box {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    
-
-}
-.contact form .input-box input,
-.contact form textarea {
-    width: 100%;
-    padding: 1.5rem;
-    font-size: 1.6rem;
-    color: var(--text-color);
-    background: var(--second-bg-color);
-    border-radius: 8rem;
-    margin: .7rem 0;
-}
-.contact form .input-bax input {
-    width: 49%;
-}
-.contact form textarea {
-    resize: none;
-}
-.contact form .btn {
-    margin-top: 2rem;
-    cursor: pointer;
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 2rem 9%;
-    background: var(--second-bg-color);
-}
-.footer-text p {
-    font-size: 1.6rem;
-
-}
-.footer-iconTop a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8rem;
-    background: var(--main-color);
-    border-radius: .8rem;
-    transition: 5s ease;
-}
-.footer-iconTop a:hover {
-    box-shadow: 0 0 1rem var(--main-color);
-}
-.footer-iconTop a i {
-    font-size: 2.4rem;
-    color: var(--second-bg-color);
-}
-#menu-icon {
-    display: block;
+.home-image {
+    object-fit: cover;
 }
 
